# gomoku

./: README.md  pyproject.toml
Dokumentit/: Määrittelydokumentti.md  Toteutusdokumentti.md  Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  Viikkoraportti 4.md  Viikkoraportti 5.md  Viikkoraportti 6.md  Viikkoraportti 7.md  testausdokumentti.md
pbrain/: myBrain.py
tests/: conftest.py  test_candidates_and_ordering.py  test_evaluation_and_protocol.py  test_exe.py  test_init_and_center.py  test_tactics_and_minimax.py
