[tool.poetry]
name = "gomoku"
version = "0.1.0"
description = ""
authors = ["Makakoodi <mar.merilainen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pyinstaller = "^6.16.0"
pywin32 = "^311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.2.6"
mypy = "^1.11.1"
hypothesis = "^6.112.0"

[tool.pytest.ini_options]
addopts = "-q --cov=gomoku_ai --cov-report=term-missing"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = false